--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -465,9 +465,12 @@
           </div>
           <label>Equip<textarea id="itemEquip" rows="2"></textarea></label>
           <label>Value<input id="itemValue" type="number" min="0" /></label>
-          <label>Use Type<select id="itemUseType"><option value="">(none)</option><option value="heal">Heal</option></select></label>
+          <label>Use Type<select id="itemUseType"><option value="">(none)</option><option value="heal">Heal</option><option value="boost">Boost</option></select></label>
           <label id="itemUseAmtWrap" style="display:none">Heal Amount<input id="itemUseAmount" type="number" min="1" /></label>
-          <label id="itemUseWrap">Use<textarea id="itemUse" rows="2"></textarea></label>
+          <label id="itemBoostStatWrap" style="display:none">Boost Stat<input id="itemBoostStat" /></label>
+          <label id="itemBoostAmtWrap" style="display:none">Boost Amount<input id="itemBoostAmount" type="number" min="1" /></label>
+          <label id="itemBoostDurWrap" style="display:none">Boost Duration<input id="itemBoostDuration" type="number" min="1" /></label>
+          <label id="itemUseWrap" style="display:none">Use Text<textarea id="itemUse" rows="2"></textarea></label>
           <button class="btn" id="addItem">Add Item</button>
           <button class="btn" type="button" id="cancelItem" style="display:none">Cancel</button>
           <button class="btn" id="delItem" style="display:none">Delete Item</button>
