test: verify patrol checkbox controls loops

--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -369,9 +369,9 @@
             <label>X<input id="npcX" type="number" min="0" /></label>
             <label>Y<input id="npcY" type="number" min="0" /></label>
           </div>
-          <label>Patrol Waypoints</label>
-          <div id="npcLoopPts"></div>
-          <button class="btn" type="button" id="addLoopPt">+ Waypoint</button>
+          <label><input type="checkbox" id="npcPatrol"> Patrol NPC</label>
+          <div id="npcLoopPts" style="display:none"></div>
+          <button class="btn" type="button" id="addLoopPt" style="display:none">+ Waypoint</button>
           <div class="portrait" id="npcPort"></div>
           <div class="row" style="margin:8px 0">
             <span class="pill" id="npcPrevP">&lt;</span>
