fix: align Adventure Kit checkboxes with labels

--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -80,6 +80,12 @@
       border-radius: 4px;
     }
 
+    input[type=checkbox] {
+      width: auto;
+      margin-top: 0;
+      display: inline-block;
+    }
+
     .xy {
       display: flex;
       gap: 4px;
