--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -480,8 +480,8 @@
           <label>Description<textarea id="itemDesc" rows="2"></textarea></label>
           <label>Tags<input id="itemTags" list="tagOptions" /></label>
           <datalist id="tagOptions"></datalist>
-          <label>Map<input id="itemMap" value="world" /></label>
-          <div class="xy">
+          <label>Map<input id="itemMap" placeholder="world" /></label>
+          <div class="xy" id="itemXY">
             <label>X<input id="itemX" type="number" min="0" /></label>
             <label>Y<input id="itemY" type="number" min="0" /></label>
           </div>
