feat: add procedural map generation

--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -355,6 +355,7 @@
           <button class="btn" id="setStart" title="Set player starting tile">Set Start</button>
           <button class="btn" id="resetStart" title="Reset player starting tile to the default">Reset Start</button>
           <button class="btn" id="clear" title="Clear the entire map">Clear Map</button>
+          <button class="btn" id="procGen" title="Generate a procedural map">Generate Map</button>
         </div>
       <input type="file" id="loadFile" accept="application/json" style="display:none" />
     </section>
@@ -749,6 +750,7 @@
     <script defer src="./components/wizard/steps/confirm.js"></script>
     <script defer src="./components/wizard/npc-wizard.js"></script>
     <script defer src="./scripts/wizard-building.js"></script>
+    <script defer src="./scripts/procedural-map.js"></script>
     <script defer src="./scripts/adventure-kit.js"></script>
   </body>
 
