feat: add hub city module and changelog

--- a/dustland.html
+++ b/dustland.html
@@ -58,6 +58,7 @@
           <button class="btn" id="settingsBtn">Settings</button>
           <button class="btn" id="fxBtn">FX</button>
           <button class="btn" id="perfBtn">Perf</button>
+          <button class="btn" id="campBtn">Camp</button>
           <button class="btn" id="screenshotBtn" hidden>Screenshot</button>
         </div>
         </div>
@@ -257,6 +258,7 @@
     <script defer src="./scripts/dustland-path.js"></script>
     <script defer src="./scripts/dustland-nano.js"></script>
     <script defer src="./scripts/dustland-engine.js"></script>
+    <script defer src="./scripts/camp-persona.js"></script>
     <script defer src="./scripts/version-log.js"></script>
     <script defer src="./scripts/fx-debug.js"></script>
     <script defer src="./scripts/perf-debug.js"></script>
