--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -355,7 +355,14 @@
           <button class="btn" id="setStart" title="Set player starting tile">Set Start</button>
           <button class="btn" id="resetStart" title="Reset player starting tile to the default">Reset Start</button>
           <button class="btn" id="clear" title="Clear the entire map">Clear Map</button>
-          <button class="btn" id="procGen" title="Generate a procedural map">Generate Map</button>
+        </div>
+        <div class="btn-group">
+          <label for="procSeed">Seed <input type="number" id="procSeed" style="width:80px" /></label>
+          <label for="procFalloff">Falloff <input type="range" id="procFalloff" min="0" max="1" step="0.1" value="0" /></label>
+          <label><input type="checkbox" id="procRoads" checked /> Roads</label>
+          <label><input type="checkbox" id="procRuins" checked /> Ruins</label>
+          <button class="btn" id="procGen" title="Generate a procedural map">Generate</button>
+          <button class="btn" id="procRegen" title="Regenerate using last settings">Regenerate</button>
         </div>
       <input type="file" id="loadFile" accept="application/json" style="display:none" />
     </section>
