feat: add quest dialog chains

--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -433,9 +433,7 @@
           </div>
           <button class="btn" type="button" id="npcPick" title="Click on the map to choose location">Select on Map</button>
           <label>Dialog<textarea id="npcDialog" rows="2"></textarea></label>
-          <label>Quest<select id="npcQuest">
-              <option value="">(none)</option>
-            </select></label>
+          <label>Quests<select id="npcQuests" multiple size="3"></select></label>
           <button class="btn" type="button" id="genQuestDialog" style="display:none">Generate Quest Dialog</button>
           <div id="questTextWrap" style="display:none">
             <label>Accept Text<textarea id="npcAccept" rows="2">Good luck.</textarea></label>
