feat: show warning and error icons

--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -701,7 +701,7 @@
         <button class="btn" type="button" id="closeDialogModal">Close</button>
       </div>
       <div id="treeEditor"></div>
-      <div id="treeWarning" style="color:#f66;font-size:12px;margin-top:4px"></div>
+      <div id="treeWarning" style="color:#fc0;font-size:12px;margin-top:4px"></div>
       <button class="btn" type="button" id="addNode">Add Node</button>
       <datalist id="choiceFlagList"></datalist>
     </div>
