fix: support interior labels

--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -543,6 +543,7 @@
         <button class="btn" type="button" id="newInterior">+ Interior</button>
         <div id="intEditor" style="display:none">
           <label>ID<input id="intId" readonly /></label>
+          <label>Label<input id="intLabel" placeholder="Interior" /></label>
           <label>W<input id="intW" type="number" min="3" value="12" /></label>
           <label>H<input id="intH" type="number" min="3" value="9" /></label>
           <div id="intPalette">
