feat: support tag-count quest turn-ins

--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -586,7 +586,7 @@
           <label>ID<input id="questId" placeholder="quest_id" /></label>
           <label>Title<input id="questTitle" placeholder="Quest title" /></label>
           <label>Description<textarea id="questDesc" rows="2" placeholder="Quest description"></textarea></label>
-          <label>Required Item<input id="questItem" /></label>
+          <label>Required Item/Tag<input id="questItem" /></label>
           <label>Reward Item<input id="questReward" /></label>
           <label>XP Reward<input id="questXP" type="number" min="0" /></label>
           <label>NPC<select id="questNPC">
