--- a/dustland.html
+++ b/dustland.html
@@ -251,7 +251,10 @@
     <script defer src="./components/dial.js"></script>
     <script defer src="./data/skills/trainer-upgrades.js"></script>
     <script defer src="./scripts/trainer-ui.js"></script>
+    <script defer src="./data/bunkers.js"></script>
+    <script defer src="./scripts/core/fast-travel.js"></script>
     <script defer src="./scripts/dustland-core.js"></script>
+    <script defer src="./scripts/ui/world-map.js"></script>
     <script defer src="./scripts/core/event-flags.js"></script>
     <script defer src="./scripts/dustland-path.js"></script>
     <script defer src="./scripts/dustland-nano.js"></script>
