feat: add bunker flag for buildings

--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -529,6 +529,7 @@
             <button type="button" data-tile="E" style="background:#000"></button>
           </div>
           <canvas id="bldgCanvas" width="192" height="160" style="margin-top:4px"></canvas>
+          <label><input type="checkbox" id="bldgBunker"> Bunker</label>
           <label>Interior<select id="bldgInterior"></select></label>
           <label><input type="checkbox" id="bldgBoarded"> Boarded</label>
           <button class="btn" id="addBldg">Add Building</button>
