--- a/dustland.html
+++ b/dustland.html
@@ -232,8 +232,10 @@
     <script defer src="./scripts/event-bus.js"></script>
     <script defer src="./scripts/fx-config.js"></script>
     <script defer src="./scripts/ui.js"></script>
+    <script defer src="./data/bunkers.js"></script>
     <script defer src="./scripts/core/item-generator.js"></script>
     <script defer src="./scripts/core/effects.js"></script>
+    <script defer src="./scripts/core/fast-travel.js"></script>
     <script defer src="./scripts/core/spoils-cache.js"></script>
     <script defer src="./scripts/core/inventory.js"></script>
     <script defer src="./scripts/core/equipment.js"></script>
