--- a/multiplayer.html
+++ b/multiplayer.html
@@ -7,8 +7,11 @@
 </head>
 <body>
   <h1>LAN Lobby</h1>
+  <button id="host">Host</button>
   <button id="refresh">Refresh</button>
   <ul id="sessions"></ul>
+  <script defer src="./scripts/supporting/multiplayer-sync.js"></script>
+  <script defer src="./scripts/multiplayer.js"></script>
   <script defer src="./scripts/supporting/multiplayer-lobby.js"></script>
 </body>
 </html>
