feat: add persona camp overlay

--- a/dustland.html
+++ b/dustland.html
@@ -283,6 +283,14 @@
       document.body.appendChild(modeScript);
     });
   </script>
+  <!-- Persona overlay -->
+  <div class="overlay" id="personaOverlay" role="dialog" aria-modal="true" tabindex="-1">
+    <div class="persona-window">
+      <h2>Equip Persona</h2>
+      <div id="personaList" class="persona-list"></div>
+      <button id="closePersonaBtn" class="btn">Close</button>
+    </div>
+  </div>
   <!-- Shop overlay -->
   <div class="overlay" id="shopOverlay" role="dialog" aria-modal="true" tabindex="-1">
     <div class="shop-window">
