feat: allow zones to set weather on entry

--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -640,6 +640,7 @@
           <label>H<input id="zoneH" type="number" min="1" value="1" /></label>
           <label>HP/Step<input id="zoneHp" type="number" /></label>
           <label>Message<input id="zoneMsg" /></label>
+          <label>Weather<input id="zoneWeather" /></label>
           <label>Negate<input id="zoneNegate" /></label>
           <label>Heal Mult<input id="zoneHealMult" type="number" step="0.1" min="0" /></label>
           <label><input type="checkbox" id="zoneNoEnc" />No Encounters</label>
