test: cover hydration HUD meter

--- a/dustland.html
+++ b/dustland.html
@@ -25,7 +25,7 @@
         <div class="hud">
           <div id="weatherBanner" class="weather-banner" hidden></div>
           <div class="badge">
-            <div class="label">HP <span id="hp">10</span></div>
+            <div class="label">HP <span id="hp">10</span><span id="hydrationMeter" class="hydration" hidden></span></div>
             <div class="hudbar" id="hpBar" role="progressbar" aria-label="Health" aria-valuemin="0" aria-valuemax="10" aria-valuenow="10">
               <div class="ghost" id="hpGhost"></div>
               <div class="fill" id="hpFill"></div>
