test: cover workbench overlay

--- a/dustland.html
+++ b/dustland.html
@@ -309,6 +309,16 @@
       <button id="closePersonaBtn" class="btn">Close</button>
     </div>
   </div>
+  <!-- Workbench overlay -->
+  <div class="overlay" id="workbenchOverlay" role="dialog" aria-modal="true" tabindex="-1">
+    <div class="workbench-window">
+      <header>
+        <div>Workbench</div>
+        <button id="closeWorkbenchBtn" class="btn">Close</button>
+      </header>
+      <div id="workbenchRecipes" class="slot-list"></div>
+    </div>
+  </div>
   <!-- Shop overlay -->
   <div class="overlay" id="shopOverlay" role="dialog" aria-modal="true" tabindex="-1">
     <div class="shop-window">
