feat: add clear save button

--- a/dustland.html
+++ b/dustland.html
@@ -53,6 +53,7 @@
         <div style="margin-top:8px" id="mainButtons">
           <button class="btn" id="saveBtn">Save</button>
           <button class="btn" id="loadBtn">Load</button>
+          <button class="btn" id="clearBtn">Clear Save</button>
           <button class="btn" id="resetBtn">Reset</button>
           <button class="btn" id="settingsBtn">Settings</button>
           <button class="btn" id="fxBtn">FX</button>
