feat: add spawn heat map visualization

--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -364,6 +364,9 @@
           <button class="btn" id="procGen" title="Generate a procedural map">Generate</button>
           <button class="btn" id="procRegen" title="Regenerate using last settings">Regenerate</button>
         </div>
+        <div class="btn-group">
+          <button class="btn" id="spawnHeatBtn" title="Toggle spawn heat map">Spawn Heat: Off</button>
+        </div>
       <input type="file" id="loadFile" accept="application/json" style="display:none" />
     </section>
     <aside class="editor-panel" id="editorPanel" aria-hidden="false">
