feat: add trainer overlay using leader skill points

--- a/dustland.html
+++ b/dustland.html
@@ -341,5 +341,16 @@
       </div>
     </div>
   </div>
+
+  <div class="overlay" id="trainerOverlay" role="dialog" aria-modal="true" tabindex="-1">
+    <div class="dialog">
+      <header>
+        <div id="trainerLeader"></div>
+        <div id="trainerPoints"></div>
+        <button id="closeTrainerBtn" class="btn">Close</button>
+      </header>
+      <div class="choices" id="trainerChoices"></div>
+    </div>
+  </div>
 </body>
 </html>
