--- a/dustland.html
+++ b/dustland.html
@@ -264,12 +264,13 @@
     <script defer src="./scripts/supporting/fx-debug.js"></script>
     <script defer src="./scripts/supporting/perf-debug.js"></script>
   <script>
+    const params = new URLSearchParams(location.search);
+    const isAck = params.get('ack-player') === '1';
+    if (!isAck) window.modulePickerPending = true;
     disablePullToRefresh();
     warnOnUnload();
     window.addEventListener('DOMContentLoaded', () => {
       document.getElementById('title').textContent += ' v' + ENGINE_VERSION;
-      const params = new URLSearchParams(location.search);
-      const isAck = params.get('ack-player') === '1';
       if (isAck) {
         UI.show('moduleLoader', 'flex');
         const btns = document.getElementById('mainButtons');
