feat: allow items to grant fuel on pickup

--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -507,6 +507,7 @@
           </div>
           <label>Equip<textarea id="itemEquip" rows="2"></textarea></label>
           <label>Value<input id="itemValue" type="number" min="0" /></label>
+          <label>Fuel<input id="itemFuel" type="number" min="0" /></label>
           <label>Use Type<select id="itemUseType"><option value="">(none)</option><option value="heal">Heal</option><option value="boost">Boost</option></select></label>
           <label id="itemUseAmtWrap" style="display:none">Heal Amount<input id="itemUseAmount" type="number" min="1" /></label>
           <label id="itemBoostStatWrap" style="display:none">Boost Stat<input id="itemBoostStat" /></label>
