--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -459,6 +459,7 @@
             <label>Markup<input id="shopMarkup" type="number" min="1" value="2" /></label>
             <label>Refresh<input id="shopRefresh" type="number" min="0" value="0" /></label>
           </div>
+          <label><input type="checkbox" id="npcWorkbench"> Workbench NPC</label>
           <div id="treeWrap">
             <label>Dialog Tree</label>
             <button class="btn" type="button" id="editDialog">Edit Dialog</button>
