feat: add scrap drop settings for npc templates

--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -700,6 +700,10 @@
           <label>Special Dmg<input id="templateSpecialDmg" type="number" min="1" /></label>
           <label>Loot<select id="templateLoot"></select></label>
           <label>Loot %<input id="templateLootChance" type="number" min="0" max="100" value="100" /></label>
+          <label>Drop Scrap<input id="templateDropScrap" type="checkbox" /></label>
+          <label class="templateScrapField" style="display:none">Scrap %<input id="templateScrapChance" type="number" min="0" max="100" value="100" /></label>
+          <label class="templateScrapField" style="display:none">Min Scrap<input id="templateScrapMin" type="number" min="0" value="1" /></label>
+          <label class="templateScrapField" style="display:none">Max Scrap<input id="templateScrapMax" type="number" min="0" value="1" /></label>
           <label>Requires<input id="templateRequires" /></label>
         <button class="btn" id="addTemplate">Add Template</button>
         <button class="btn" id="delTemplate" style="display:none">Delete Template</button>
