fix: clarify template challenge scale

--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -695,7 +695,7 @@
           <label>HP<input id="templateHP" type="number" min="1" value="5" /></label>
           <label>ATK<input id="templateATK" type="number" min="1" value="1" /></label>
           <label>DEF<input id="templateDEF" type="number" min="0" value="0" /></label>
-          <label>Challenge<input id="templateChallenge" type="number" min="0" /></label>
+          <label>Challenge (1-10)<span class="help" title="Higher values improve loot cache drops">(?)</span><input id="templateChallenge" type="number" min="1" max="10" /></label>
           <label>Special Cue<input id="templateSpecialCue" /></label>
           <label>Special Dmg<input id="templateSpecialDmg" type="number" min="1" /></label>
           <label>Loot<select id="templateLoot"></select></label>
