--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -757,6 +757,7 @@
       ▶ Playtest
   </button>
   <script defer src="./scripts/event-bus.js"></script>
+  <script defer src="./scripts/supporting/chiptune.js"></script>
   <script defer src="./scripts/core/effects.js"></script>
   <script defer src="./scripts/core/inventory.js"></script>
   <script defer src="./scripts/core/actions.js"></script>
