--- a/dustland.html
+++ b/dustland.html
@@ -74,6 +74,7 @@
       <main>
         <button class="btn" id="nanoToggle">Nano Dialog</button>
         <button class="btn" id="audioToggle">Audio: On</button>
+        <button class="btn" id="musicToggle">Music: Off</button>
         <button class="btn" id="mobileToggle">Mobile Controls: Off</button>
         <button class="btn" id="tileCharToggle">ASCII Tiles: On</button>
         <button class="btn" id="settingsClose">Close</button>
@@ -231,6 +232,7 @@
   </div>
 
     <script defer src="./scripts/event-bus.js"></script>
+    <script defer src="./scripts/supporting/chiptune.js"></script>
     <script defer src="./scripts/fx-config.js"></script>
     <script defer src="./scripts/ui.js"></script>
     <script defer src="./scripts/core/item-generator.js"></script>
@@ -271,16 +273,18 @@
     disablePullToRefresh();
     window.addEventListener('DOMContentLoaded', () => {
       document.getElementById('title').textContent += ' v' + ENGINE_VERSION;
-      if (isAck) {
-        UI.show('moduleLoader', 'flex');
-        const btns = document.getElementById('mainButtons');
-        const nanoBtn = document.getElementById('nanoToggle');
-        const audioBtn = document.getElementById('audioToggle');
-        btns.appendChild(nanoBtn);
-        btns.appendChild(audioBtn);
-        const settingsBtn = document.getElementById('settingsBtn');
-        if (settingsBtn) UI.hide('settingsBtn');
-      }
+        if (isAck) {
+          UI.show('moduleLoader', 'flex');
+          const btns = document.getElementById('mainButtons');
+          const nanoBtn = document.getElementById('nanoToggle');
+          const audioBtn = document.getElementById('audioToggle');
+          const musicBtn = document.getElementById('musicToggle');
+          btns.appendChild(nanoBtn);
+          btns.appendChild(audioBtn);
+          btns.appendChild(musicBtn);
+          const settingsBtn = document.getElementById('settingsBtn');
+          if (settingsBtn) UI.hide('settingsBtn');
+        }
       const modeScript = document.createElement('script');
       modeScript.defer = true;
       modeScript.src = isAck ? './scripts/ack-player.js' : './scripts/module-picker.js';
