feat: add retro npc svg mode

--- a/balance-tester.html
+++ b/balance-tester.html
@@ -73,6 +73,10 @@
         <button class="btn" id="musicToggle">Music: Off</button>
         <button class="btn" id="mobileToggle">Mobile Controls: Off</button>
         <button class="btn" id="tileCharToggle">ASCII Tiles: On</button>
+        <div class="field field--toggle">
+          <label for="retroNpcToggle">Retro NPC Portraits</label>
+          <input type="checkbox" id="retroNpcToggle" />
+        </div>
         <button class="btn" id="settingsClose">Close</button>
       </main>
     </div>
