feat: scope bunker travel networks

--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -348,6 +348,13 @@
           <label for="moduleName">Module Name</label>
           <input type="text" id="moduleName" />
           </div>
+          <div style="padding:0px 13px 0px 0px;font-family: sans-serif;max-width:200px;">
+          <label for="moduleBunkerScope">Bunker Travel</label>
+          <select id="moduleBunkerScope">
+            <option value="global">Share across modules</option>
+            <option value="module">This module only</option>
+          </select>
+          </div>
           <button class="btn btn--primary" id="save" title="Download module as a JSON file">Save</button>
           <button class="btn" id="load" title="Load a module from a JSON file">Load</button>
         </div>
